syntax = "proto3";

package test.bazel.proto;

import "test/bazel/proto/common/pizza.proto";

message DeliveryPerson {
  // The name of the delivery person.
  string name = 1;

  // The list of pizzas the delivery person has left to deliver.
  repeated Pizza pizzas = 2;
}
