// This file tests a bunch of valid naming schemes for messages.
syntax = "proto3";

package test.bazel.proto;

message alllowercase {
  int64 test = 1;
}

message ALLUPPERCASE {
  int64 test = 1;
}

message lowerCamelCase {
  int64 test = 1;
}

message UpperCamelCase {
  int64 test = 1;
}

message snake_case_snake_case {
  int64 test = 1;
}

message Upper_snake_Case {
  int64 test = 1;
}

message M2M {
  int64 test = 1;
}

message M_2M {
  int64 test = 1;
}

message M2_M {
  int64 test = 1;
}

message M2M_ {
  int64 test = 1;
}

message m_22M {
  int64 test = 1;
}

message m42_M {
  int64 test = 1;
}

message m24M_ {
  int64 test = 1;
}

message M9 {
  int64 test = 1;
}
